--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
      <div class="footer-main-div">
       <div class="social-media-icon">
         <h2>FASHION</h2>
-        <p>Complete your style with awesome shoes from us.</p>
+        <p>Complete your style with awesome <br> shoes from us.</p>
         <span>
           <a href="#" class="fa fa-facebook"></a>
           <a href="#" class="fa fa-instagram"></a>
