--- a/index.html
+++ b/index.html
@@ -229,15 +229,15 @@
          <img src="/Images/category1 1.jpg" alt="">
         </div>
         <div class="img1-div">
-          <button class="shop-category-button">The Trainer</button>
+          <button class="shop-category-button">The Loafer</button>
          <img src="/Images/category2 1.jpg" alt="">
         </div>
         <div class="img1-div">
-          <button class="shop-category-button">The Trainer</button>
+          <button class="shop-category-button">The Service Boot</button>
          <img src="/Images/category3 1.jpg" alt="">
         </div>
         <div class="img1-div">
-          <button class="shop-category-button">The Trainer</button>
+          <button class="shop-category-button">The Dress Sneaker</button>
          <img src="/Images/category4 1.jpg" alt="">
         </div>
       </div>
@@ -246,7 +246,7 @@
      </section>
       <!-- ===================== browse all category Section ============================= -->
      
-      <section class="section-2-cardSlider">
+      <section class="section-4">
         <div id="carouselExampleControls" class="carousel  slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
