--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
   <link rel="stylesheet" href="index.css" />
-  <title>E-Commerce</title>
+  <title>E-Commerce HOME</title>
 </head>
 
 <body>
@@ -21,8 +21,8 @@
     <div class="wrapper">
       <div class="box">
         <form id="searchBox">
-          <input placeholder="Search Products & Brands.." type="text" />
-          <input id="submitBtn" type="submit" value="Search" />
+          <input placeholder="Search Products & Brands.."  type="text" />
+          <input id="submitBtn"  class="mainLoginInput"   type="submit" value="SEARCH" />
         </form>
         <nav id="navArea">
           <ul class="navArea">
@@ -32,7 +32,8 @@
                 <a href="#">HOME<i class="fa-solid fa-house fafaitem-space"></i></a>
               </li>
               <li>
-                <a href="#">CART<i class="fa-sharp fa-solid fa-basket-shopping fafaitem-space"></i></a>
+                <a href="#">CART<i class="fa-sharp fa-solid fa-basket-shopping fafaitem-space"></i>
+                <span class="digit-count">4</span></a>
               </li>
               <li>
                 <a href="#">WISHLIST<i class="fa-solid fa-heart fafaitem-space"></i></a>
