--- a/HTML/Desktopcategory.html
+++ b/HTML/Desktopcategory.html
@@ -6,13 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-    integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="/CSS/Desktopcategory.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/CSS/Desktopcategory.css" />
     <title>Categories</title>
 </head>
 
@@ -93,64 +98,203 @@
 
     <!-- -------------------------Section 2 Start Details Of Shoes -------------------------- -->
     <section class="section-3">
-        <div class="sectin3-heading"><h1>The Trainer</h1></div>
-        <div class="catehories-maindiv">
-          <div class="img1-div">
-            <div class="heart-shape">
-                <input id="heart" type="checkbox" />
-                <!-- <label for="heart">❤</label> -->
-                <label for="heart"></label>
-              </div>
-           <img src="/Images/desktopcategoryimg.jpg" alt="">
-           <div class="shoes-details">
-            <p> ASIAN MENS WATERPROOF-051 <br> WHITE SPORTS SHOES - 10 UK <br> (WATERPROOF-05) <br> <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star checked"></span>
-                <span class="fa fa-star-half-full checked" style=" font-size:15px"></span> 1,562 <br> DEAL OF THE DAY <br>
-                  <span style="color: #EA4335;">&#x20B9;649.00</span><br>
-                  LIST:&#x20B9;<strike>999.00</strike> (35% OFF)</p>
-           </div>
-          </div>
-          <div class="img1-div">
-            <div class="heart-shape">
-                <input id="heart1" type="checkbox" />
-                <!-- <label for="heart">❤</label> -->
-                <label for="heart1"></label>
-              </div>
-           <img src="/Images/desktopcategoryimg.jpg" alt="">
-           <div class="shoes-details">
-            <p> ASIAN MENS WATERPROOF-051 <br> WHITE SPORTS SHOES - 10 UK <br> (WATERPROOF-05)</p>
-           </div>
-          </div>
-          <div class="img1-div">
-            <div class="heart-shape">
-                <input id="heart2" type="checkbox" />
-                <!-- <label for="heart">❤</label> -->
-                <label for="heart2"></label>
-              </div>
-           <img src="/Images/desktopcategoryimg.jpg" alt="">
-          </div>
-          <div class="img1-div">
-            <div class="heart-shape">
-                <input id="heart3" type="checkbox" />
-                <!-- <label for="heart">❤</label> -->
-                <label for="heart3"></label>
-              </div>
-           <img src="/Images/desktopcategoryimg.jpg" alt="">
-          </div>
+        <div class="sectin3-heading">
+            <h1>The Trainer</h1>
         </div>
-        <div class="browsallcategory"><button class="check-browscategory-button">BROWSE ALL CATEGORIES</button></div>
-  
-       </section>
+        <div class="catehories-maindiv">
+            <div class="img1-div">
+                <div class="heart-shape">
+                    <input id="heart" type="checkbox" />
+                    <!-- <label for="heart">❤</label> -->
+                    <label for="heart"></label>
+                </div>
+                <img src="/Images/desktopcategoryimg.jpg" alt="">
+                <div class="shoes-details">
+                    <p> ASIAN MENS WATERPROOF-051 <br> WHITE SPORTS SHOES - 10 UK <br> (WATERPROOF-05) <br> <span
+                            class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star-half-full checked"></span> 1,562 <br> DEAL OF THE DAY <br>
+                        <span style="color: #EA4335;">&#x20B9;649.00</span><br>
+                        LIST:&#x20B9;<strike>999.00</strike> (35% OFF)
+                    </p>
+                </div>
+            </div>
+            <div class="img1-div">
+                <div class="heart-shape">
+                    <input id="heart1" type="checkbox" />
+                    <!-- <label for="heart">❤</label> -->
+                    <label for="heart1"></label>
+                </div>
+                <img src="/Images/desktopcategoryimg.jpg" alt="">
+                <div class="shoes-details">
+                    <p> ASIAN MENS WATERPROOF-051 <br> WHITE SPORTS SHOES - 10 UK <br> (WATERPROOF-05) <br> <span
+                            class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star-half-full checked"></span> 1,562 <br> DEAL OF THE DAY <br>
+                        <span style="color: #EA4335;">&#x20B9;649.00</span><br>
+                        LIST:&#x20B9;<strike>999.00</strike> (35% OFF)
+                    </p>
+                </div>
+            </div>
+            <div class="img1-div">
+                <div class="heart-shape">
+                    <input id="heart2" type="checkbox" />
+                    <!-- <label for="heart">❤</label> -->
+                    <label for="heart2"></label>
+                </div>
+                <img src="/Images/desktopcategoryimg.jpg" alt="">
+                <div class="shoes-details">
+                    <p> ASIAN MENS WATERPROOF-051 <br> WHITE SPORTS SHOES - 10 UK <br> (WATERPROOF-05) <br> <span
+                            class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star-half-full checked"></span> 1,562 <br> DEAL OF THE DAY <br>
+                        <span style="color: #EA4335;">&#x20B9;649.00</span><br>
+                        LIST:&#x20B9;<strike>999.00</strike> (35% OFF)
+                    </p>
+                </div>
+            </div>
+            <div class="img1-div">
+                <div class="heart-shape">
+                    <input id="heart3" type="checkbox" />
+                    <!-- <label for="heart">❤</label> -->
+                    <label for="heart3"></label>
+                </div>
+                <img src="/Images/desktopcategoryimg.jpg" alt="">
+                <div class="shoes-details">
+                    <p> ASIAN MENS WATERPROOF-051 <br> WHITE SPORTS SHOES - 10 UK <br> (WATERPROOF-05) <br> <span
+                            class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star-half-full checked"></span> 1,562 <br> DEAL OF THE DAY <br>
+                        <span style="color: #EA4335;">&#x20B9;649.00</span><br>
+                        LIST:&#x20B9;<strike>999.00</strike> (35% OFF)
+                    </p>
+                </div>
+            </div>
+        </div>
 
+        <button class="seemore-btn">See More<i class="fa-solid fa-chevron-right"></i></button>
+
+        <div class="browsallcategory"><button class="check-browscategory-button">MORE CATEGORIES</button></div>
+
+    </section>
+    <!------------------ Section-3 Image slider ---------------------------------- -->
+
+    <section class="section-2-cardSlider">
+        <div id="carouselExampleControls" class="carousel  slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="card-wrapper container-sm d-flex  justify-content-around">
+                        <div class="cards-items-wish">
+                            <div class="card  padding-inner" style="width: 36rem;">
+                                <img src="/Images/category1 1.jpg" alt="...">
+                                <button class="shop-category-button">The Trainer</button>
+                            </div>
+                        </div>
+                        <div class="cards-items-wish">
+                            <div class="card  padding-inner" style="width: 36rem;">
+                                <img src="/Images/category4 1.jpg" alt="...">
+                                <button class="shop-category-button">The Service Boot</button>
+                            </div>
+                        </div>
+                        <div class="cards-items-wish">
+                            <div class="card  padding-inner" style="width: 36rem;">
+                                <img src="/Images/category3 1.jpg" alt="...">
+                                <button class="shop-category-button">The Dress Sneaker</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!---------------------------- Carausel item 2---------------------------------- -->
+                <div class="carousel-item">
+                    <div class="card-wrapper container-sm d-flex  justify-content-around">
+                        <div class="cards-items-wish">
+                            <div class="card  padding-inner" style="width: 36rem;">
+                                <img src="/Images/category1 1.jpg" alt="...">
+                                <button class="shop-category-button">The Service Boot</button>
+                            </div>
+                        </div>
+                        <div class="card  padding-inner" style="width: 37rem;">
+                            <img src="/Images/category2 1.jpg" alt="...">
+                            <button class="shop-category-button">The Loafer</button>
+                        </div>
+                        <div class="card  padding-inner" style="width: 37rem;">
+                            <img src="/Images/category3 1.jpg" alt="...">
+                            <button class="shop-category-button">The Service Boot</button>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+    </section>
+
+    <!-- ================== Footer Section =========================================== -->
+
+    <section class="footer-section">
+        <footer>
+            <div class="footer-main-div">
+                <div class="social-media-icon">
+                    <h2>FASHION</h2>
+                    <p>Complete your style with awesome <br> shoes from us.</p>
+                    <span>
+                        <a href="#" class="fa fa-facebook"></a>
+                        <a href="#" class="fa fa-instagram"></a>
+                        <a href="#" class="fa fa-twitter"></a>
+                        <a href="#" class="fa fa-linkedin"></a>
+                    </span>
+                </div>
+
+                <div class="company">
+                    <h2>Company</h2>
+                    <div class="links-About">
+                        <a href="">About</a>
+                        <a href="">Contact us</a>
+                        <a href="">Support</a>
+                        <a href="">Careers</a>
+                    </div>
+                </div>
+
+                <div class="company">
+                    <h2>Quick Link</h2>
+                    <div class="links-About">
+                        <a href="">Share Location</a>
+                        <a href="">FAQs</a>
+                    </div>
+                </div>
+
+                <div class="company">
+                    <h2>Legal</h2>
+                    <div class="links-About">
+                        <a href="">Terms & Conditions</a>
+                        <a href="">Privacy Policy</a>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-    crossorigin="anonymous"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <script src="/JS/index.js"></script>
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="/JS/index.js"></script>
 </body>
 
 </html>
