update complted wishlist

--- a/HTML/wishlist.html
+++ b/HTML/wishlist.html
@@ -149,49 +149,126 @@
             </div>
         </div>
     </section>
-  <!-- =============== Wishlist Section end ==================================================== -->
+    <!-- =============== Wishlist Section end ==================================================== -->
 
-  <!-- ========================= End Line =================================================  -->
+    <!-- ========================= End Line =================================================  -->
     <div class="enline-div">
-    <div style="float: left;
+        <div style="float: left;
     margin-top: 12px;
     margin-right: 10px;
     width: 44%;">
-        <hr />
-    </div>
-    <span class="end-line"> END OF LIST </span>
-    <div style="float: right;
+            <hr />
+        </div>
+        <span class="end-line"> END OF LIST </span>
+        <div style="float: right;
     margin-top: 12px;
     width: 46%;">
-        <hr />
+            <hr />
+        </div>
     </div>
-</div>
-<!--=========================== End Line Section End =================================  -->
+    <!--=========================== End Line Section End =================================  -->
     <!-- ==================================== Wish list end  ========================== -->
 
     <!-- ================= My Account Section ======================================= -->
 
     <section class="my-account-section">
         <div class="main-div">
-        <div><h2>My Account</h2></div>
-        <div class="divide-three">
-            <div class="subsection-1">
-                <p class="icon-text"><img src="/Images/wishlist_images/uservector.png" alt="img"><span class="user-spn">USERNAME <br> GMAIL</span></p>
-                <p class="clickable-link">You might be logged in on <br>other devices.to sign out <br> from all devices <br> <a href="">CLICK HERE</a></p>
+            <div class="maindivh2">
+                <h2>My Account</h2>
             </div>
-            <div class="subsection-2">
-                <div class="icon-text2"><img src="/Images/wishlist_images/filevector.png" alt="img"><h2>ORDERS</h2></div><h3>Orders</h3>
+            <div class="divide-three">
+                <div class="subsection-1">
+                    <p class="icon-text"><img src="/Images/wishlist_images/uservector.png" alt="img"><span
+                            class="user-spn">USERNAME <br> GMAIL</span></p>
+                    <p class="clickable-link">You might be logged in on <br>other devices.to sign out <br> from all
+                        devices <br> <a href="">CLICK HERE</a></p>
+                </div>
+                <div class="subsection-2">
+                    <div class="icon-text2"><img src="/Images/wishlist_images/filevector.png" alt="img">
+                        <h2>ORDERS</h2>
+                    </div>
+                    <h3>Orders</h3>
 
-                <div class="icon-text3"><img src="/Images/wishlist_images/paymentvector.png" alt="img"><h2>PAYMENTS</h2></div><h3>E-gift Voucher <br>balance</h3>
+                    <div class="icon-text3"><img src="/Images/wishlist_images/paymentvector.png" alt="img">
+                        <h2>PAYMENTS</h2>
+                    </div>
+                    <h3>E-gift Voucher <br>balance</h3>
+                </div>
+                <div class="subsection-3">
+                    <div class="icon-text4"><img src="/Images/wishlist_images/userlastvector.png" alt="img">
+                        <h2>PROFILE</h2>
+                    </div>
+                    <ul>
+                        <li>
+                            <h3>Saved Adresses</h3>
+                        </li>
+                        <li>
+                            <h3>Saved Cards</h3>
+                        </li>
+                        <li>
+                            <h3>Change Password</h3>
+                        </li>
+                        <a href="" style="color: #EA4335;">
+                            <li>
+                                <h3>Wishlist</h3>
+                            </li>
+                        </a>
+
+                    </ul>
+                </div>
             </div>
-            <div class="subsection-3"></div>
         </div>
-    </div>
+    </section>
+    <!-- ====================== My Account Section END ======================================== -->
 
+    <!-- ======================= Footer Section Start =========================================== -->
+    <section class="footer-section">
+        <footer>
+            <div class="footer-main-div">
+                <div class="social-media-icon">
+                    <h2>FASHION</h2>
+                    <p>Complete your style with awesome <br> shoes from us.</p>
+                    <span>
+                        <a href="#" class="fa fa-facebook"></a>
+                        <a href="#" class="fa fa-instagram"></a>
+                        <a href="#" class="fa fa-twitter"></a>
+                        <a href="#" class="fa fa-linkedin"></a>
+                    </span>
+                </div>
+
+                <div class="company">
+                    <h2>Company</h2>
+                    <div class="links-About">
+                        <a href="">About</a>
+                        <a href="">Contact us</a>
+                        <a href="">Support</a>
+                        <a href="">Careers</a>
+                    </div>
+                </div>
+
+                <div class="company">
+                    <h2>Quick Link</h2>
+                    <div class="links-About">
+                        <a href="">Share Location</a>
+                        <a href="">FAQs</a>
+                    </div>
+                </div>
+
+                <div class="company">
+                    <h2>Legal</h2>
+                    <div class="links-About">
+                        <a href="">Terms & Conditions</a>
+                        <a href="">Privacy Policy</a>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </section>
 
+    <!-- ======================= Footer Section Start =========================================== -->
 
 
+    <script src="/JS/wishlist.js"></script>
 </body>
 
 </html>
