Commit Code Add links

--- a/HTML/Add_to_cart.html
+++ b/HTML/Add_to_cart.html
@@ -27,14 +27,14 @@
                         <li class="circle1"></li>
                         <span class="navleft">
                             <li>
-                                <a href="#">HOME<i class="fa-solid fa-house fafaitem-space"></i></a>
+                                <a href="/index.html">HOME<i class="fa-solid fa-house fafaitem-space"></i></a>
                             </li>
                             <li>
-                                <a href="#">CART<i class="fa-sharp fa-solid fa-basket-shopping fafaitem-space"></i>
+                                <a href="/HTML/Add_to_cart.html">CART<i class="fa-sharp fa-solid fa-basket-shopping fafaitem-space"></i>
                                     <span class="digit-count">4</span></a>
                             </li>
                             <li>
-                                <a href="#">WISHLIST<i class="fa-solid fa-heart fafaitem-space"></i></a>
+                                <a href="/HTML/wishlist.html">WISHLIST<i class="fa-solid fa-heart fafaitem-space"></i></a>
                             </li>
                             <li>
                                 <a href="#">USERNAME<i class="fa-solid fa-user fafaitem-space"></i></a>
