--- a/HTML/login.html
+++ b/HTML/login.html
@@ -87,7 +87,7 @@
         <span class="fa-brands fa-apple"></span>
       </div>
       <div class="signup-link">
-        <p>Don’t have an account? <a href="">SignUp</a></p>
+        <p>Don’t have an account? <a href="/HTML/signup.html">SignUp</a></p>
       </div>
     </div>
 
