--- a/HTML/signup.html
+++ b/HTML/signup.html
@@ -75,7 +75,7 @@
                     </div>
                     <button type="submit">Login</button>
             </form>
-            <div style="text-align: center; margin-top: 2rem; padding-bottom: 4rem;"><a href="" style="text-decoration: none;
+            <div style="text-align: center; margin-top: 2rem; padding-bottom: 4rem;"><a href="/HTML/login.html" style="text-decoration: none;
                 color: #6C6C6C;
                 font-size: 24px;">I'm already a member</a></div>
         </div>
