--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
             <li class="circle1"></li>
             <span class="navleft">
               <li>
-                <a href="#">HOME<i class="fa-solid fa-house fafaitem-space"></i></a>
+                <a href="/index.html">HOME<i class="fa-solid fa-house fafaitem-space"></i></a>
               </li>
               <li>
-                <a href="#">CART<i class="fa-sharp fa-solid fa-basket-shopping fafaitem-space"></i>
+                <a href="/HTML/Add_to_cart.html">CART<i class="fa-sharp fa-solid fa-basket-shopping fafaitem-space"></i>
                 <span class="digit-count">4</span></a>
               </li>
               <li>
-                <a href="#">WISHLIST<i class="fa-solid fa-heart fafaitem-space"></i></a>
+                <a href="/HTML/wishlist.html">WISHLIST<i class="fa-solid fa-heart fafaitem-space"></i></a>
               </li>
               <li>
-                <a href="#">SignUp / Login<i class="fa-solid fa-user fafaitem-space"></i></a>
+                <a href="/HTML/login.html">SignUp / Login<i class="fa-solid fa-user fafaitem-space"></i></a>
               </li>
             </span>
           </ul>
@@ -242,7 +242,7 @@
          <img src="/Images/category4 1.jpg" alt="">
         </div>
       </div>
-      <div class="browsallcategory"><button class="check-browscategory-button">BROWSE ALL CATEGORIES</button></div>
+      <div class="browsallcategory"><a href="/HTML/Desktopcategory.html"><button class="check-browscategory-button">BROWSE ALL CATEGORIES</button></a></div>
 
      </section>
       <!-- ===================== browse all category Section ============================= -->
