--- a/index.html
+++ b/index.html
@@ -289,9 +289,9 @@
               <!-- <label for="heart">❤</label> -->
               <label for="heart34"></label>
             </div>
-            <img src="Images/image 1 (1).jpg" alt="...">
+            <img src="Images/image 1.jpg" alt="...">
             <div class="card-body">
-              <h1 class="card-title">Artsy</h1>
+              <h1 class="card-title">Berkely</h1>
               <button class="card-button-1">SHOP NOW</button>
             </div>
           </div>
@@ -303,9 +303,9 @@
               <!-- <label for="heart">❤</label> -->
               <label for="heart35"></label>
             </div>
-            <img src="Images/image 1 (1).jpg" alt="...">
+            <img src="Images/image 2.jpg" alt="...">
             <div class="card-body">
-              <h1 class="card-title">Artsy</h1>
+              <h1 class="card-title">Capucinus</h1>
               <button class="card-button-1">SHOP NOW</button>
             </div>
           </div>
