--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
 <body>
 
+
+
   <!-- ===============================Mobile View ========================== -->
   <!-- ------------------------ Navbar For Mobile ------------------------- -->
 
@@ -30,27 +32,38 @@
     <h2>Shoes</h2>
     <img src="/Images/manimage.png" alt="">
   </div>
-
+  
+  
   <div class="cart">
-    <div style="position: relative;">
+    <div style="position: relative; border-bottom: 1px solid #C4C4C4;">
       <h2 class="cart-title">Shoes</h2>
-      <hr>
-      <i class="fa-solid fa-xmark"></i>
+     
+      <i class="fa-solid fa-xmark" id="close-cart" ></i>
     </div>
     <!-- ========= Drop-Down Menu ========================= -->
     <div class="dropdown">
-      <button onclick="myFunction()" class="dropbtn">Shop <i class="fa-solid fa-chevron-down"></i></button>
+      <button onclick="myFunction()" class="dropbtn">SHOP <i class="fa-solid fa-chevron-down"></i></button>
       <div id="myDropdown" class="dropdown-content">
         <a href="#home">For Men</a>
         <a href="#about">For Women</a>
         <a href="#contact">For Trends</a>
       </div>
     </div>
+    <div class="best-seller">BEST SELLER</div>
+
+    <div class="dropdown1">
+      <button onclick="myFunction1()" class="dropbtn1">GIFTING <i class="fa-solid fa-chevron-down"></i></button>
+      <div id="myDropdown1" class="dropdown-content1">
+        <a href="#home">For Him</a>
+        <a href="#about">For Her</a>
+      </div>
+    
 
 
     <!-- cart close -->
-    <i class="fa fa-times" id="close-cart" aria-hidden="true"></i>
+   
   </div>
+</div>
 
 
   <!-- ================================ Mobile END ========================== -->
@@ -179,8 +192,6 @@
                 <div class="card-body">
                   <h1 class="card-title">Capucinus</h1>
                   <button class="card-button-1">SHOP NOW</button>
-
-
                 </div>
               </div>
             </div>
@@ -430,6 +441,19 @@
         </button>
       </div>
   </section>
+   <!-- ================ Position Fixed Section ============================ -->
+
+   <section class="fixed-div-section">
+    <div class="icons">
+      <a href="/index.html"><i class="fa-solid fa-house"></i></a>
+      <a href=""><i class="fa-sharp fa-solid fa-magnifying-glass"></i></a>
+      <a href="/HTML/wishlist.html"><i class="fa-solid fa-heart"></i></a>
+      <a href="/HTML/Add_to_cart.html"><i class="fa-solid fa-basket-shopping"></i><span class="digit-count1">4</span></a>
+
+    </div>
+   </section>
+
+   <!-- ================ Position Fixed Section End ========================= -->
 
   <!--============================ Shop By Categories Section End ============================ -->
 
@@ -475,7 +499,7 @@
       </div>
     </footer>
   </section>
-
+  
   <!-- ---------------- Script Tag ---------------------------------------------------- -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
