--- a/HTML/Desktopcategory.html
+++ b/HTML/Desktopcategory.html
@@ -18,10 +18,53 @@
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/CSS/Desktopcategory.css" />
+    <link rel="stylesheet" href="/CSS/responsive_css/respo-desktopcategory.css">
     <title>Categories</title>
 </head>
 
 <body>
+    <!-- ------------------------ Navbar For Mobile ------------------------- -->
+
+    <div class="mobile-navbar">
+        <i class="fa-sharp fa-solid fa-bars" id="cart-icon"></i>
+        <h2>Shoes</h2>
+        <img src="/Images/manimage.png" alt="">
+    </div>
+
+
+    <div class="cart">
+        <div style="position: relative; border-bottom: 1px solid #C4C4C4;">
+            <h2 class="cart-title">Shoes</h2>
+
+            <i class="fa-solid fa-xmark" id="close-cart"></i>
+        </div>
+        <!-- ========= Drop-Down Menu ========================= -->
+        <div class="dropdown">
+            <button onclick="myFunction()" class="dropbtn">SHOP <i class="fa-solid fa-chevron-down"></i></button>
+            <div id="myDropdown" class="dropdown-content">
+                <a href="#home">For Men</a>
+                <a href="#about">For Women</a>
+                <a href="#contact">For Trends</a>
+            </div>
+        </div>
+        <div class="best-seller">BEST SELLER</div>
+
+        <div class="dropdown1">
+            <button onclick="myFunction1()" class="dropbtn1">GIFTING <i class="fa-solid fa-chevron-down"></i></button>
+            <div id="myDropdown1" class="dropdown-content1">
+                <a href="#home">For Him</a>
+                <a href="#about">For Her</a>
+            </div>
+
+
+
+            <!-- cart close -->
+
+        </div>
+    </div>
+
+
+    <!-- ================================ Mobile END ========================== -->
     <nav>
         <div class="wrapper">
             <div class="box">
@@ -37,14 +80,17 @@
                                 <a href="/index.html">HOME<i class="fa-solid fa-house fafaitem-space"></i></a>
                             </li>
                             <li>
-                                <a href="/HTML/Add_to_cart.html">CART<i class="fa-sharp fa-solid fa-basket-shopping fafaitem-space"></i>
+                                <a href="/HTML/Add_to_cart.html">CART<i
+                                        class="fa-sharp fa-solid fa-basket-shopping fafaitem-space"></i>
                                     <span class="digit-count">4</span></a>
                             </li>
                             <li>
-                                <a href="/HTML/wishlist.html">WISHLIST<i class="fa-solid fa-heart fafaitem-space"></i></a>
+                                <a href="/HTML/wishlist.html">WISHLIST<i
+                                        class="fa-solid fa-heart fafaitem-space"></i></a>
                             </li>
                             <li>
-                                <a href="/HTML/login.html">SignUp / Login<i class="fa-solid fa-user fafaitem-space"></i></a>
+                                <a href="/HTML/login.html">SignUp / Login<i
+                                        class="fa-solid fa-user fafaitem-space"></i></a>
                             </li>
                         </span>
                     </ul>
@@ -70,15 +116,15 @@
                         <div class="img-heading">
                             <h1>This <br> season's <br> latest</h1>
                         </div>
-                        <img src="/Images/desktopcategory2.jpg" alt="Los Angeles" style="width:100%; height: 60rem;">
+                        <img src="/Images/desktopcategory2.jpg" alt="Los Angeles">
                     </div>
 
                     <div class="item">
-                        <img src="/Images/slidedesk.jpg" alt="Chicago" style="width:100%; height: 60rem;">
+                        <img src="/Images/slidedesk.jpg" alt="Chicago">
                     </div>
 
                     <div class="item">
-                        <img src="/Images/slidedesk.jpg" alt="New york" style="width:100%; height: 60rem;">
+                        <img src="/Images/slidedesk.jpg" alt="New york">
                     </div>
                 </div>
 
@@ -244,6 +290,51 @@
             </div>
     </section>
 
+    <!-- ============== Mobile Section View ===================== -->
+    <section class="mobile-section">
+        <div class="mob-sect-maindiv">
+            <div class="cards-items-wish">
+                <div class="card  padding-inner">
+                    <img src="/Images/category1 1.jpg" alt="...">
+                    <button class="shop-category-button">The Loafer</button>
+                </div>
+            </div>
+            <div class="cards-items-wish">
+                <div class="card  padding-inner">
+                    <img src="/Images/category2 1.jpg" alt="...">
+                    <button class="shop-category-button">The Service Boot</button>
+                </div>
+            </div>
+            <div class="cards-items-wish">
+                <div class="card  padding-inner">
+                    <img src="/Images/category3 1.jpg" alt="...">
+                    <button class="shop-category-button">The Dress Sneaker</button>
+                </div>
+            </div>
+            <div class="cards-items-wish">
+                <div class="card  padding-inner">
+                    <img src="/Images/category4 1.jpg" alt="...">
+                    <button class="shop-category-button">The Trainer</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- ============== Mobile Section View End ===================== -->
+     <!-- ================ Position Fixed Section ============================ -->
+
+   <section class="fixed-div-section">
+    <div class="icons">
+      <a href="/index.html"><i class="fa-solid fa-house"></i></a>
+      <a href=""><i class="fa-sharp fa-solid fa-magnifying-glass"></i></a>
+      <a href="/HTML/wishlist.html"><i class="fa-solid fa-heart"></i></a>
+      <a href="/HTML/Add_to_cart.html"><i class="fa-solid fa-basket-shopping"></i><span class="digit-count1">4</span></a>
+
+    </div>
+   </section>
+
+   <!-- ================ Position Fixed Section End ========================= -->
+
     <!-- ================== Footer Section =========================================== -->
 
     <section class="footer-section">
@@ -295,6 +386,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="/JS/index.js"></script>
+    <script src="/JS/wishlist.js"></script>
 </body>
 
 </html>
