--- a/HTML/wishlist.html
+++ b/HTML/wishlist.html
@@ -57,7 +57,7 @@
     </div>
 
     <div class="wishlist-searchbar">
-        <i class="fa-sharp fa-solid fa-magnifying-glass"></i>
+        <i class="fa-sharp fa-solid fa-magnifying-glass mag-glass"></i>
         <input type="search" placeholder="Search your item here...">
     </div>
 
