--- a/HTML/Add_to_cart.html
+++ b/HTML/Add_to_cart.html
@@ -165,7 +165,7 @@
                     </div>
                 </div>
                 <div class="place-order-div">
-                    <button class="place-order-btn">PLACE ORDER</button>
+                   <a href="/HTML/Payment.html"><button class="place-order-btn">PLACE ORDER</button></a>
                 </div>
             </div>
 
