update check all latest

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
         </div>
       </div>
     </div>
-    <div class="checkalllatest"><button class="check-all-button">CHECK ALL LATEST</button></div>
+    <div class="checkalllatest-mobile"><button class="check-all-button">CHECK ALL LATEST</button></div>
   </section>
   <!-- ============== Mobile Section Card Slider end ================ -->
   <!-- ========================== Sliding Card Section End =================================== -->
